force-app/main/default/objects/Application__c/fields/Submit_Application_Validation__c.field-meta.xml
<CustomField>
    <fullName>Submit_Application_Validation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submit Application Validation</label>
    <type>Checkbox</type>
</CustomField>