force-app/main/default/objects/Application__c/fields/Tax_Form_Recent_Years_P_G__c.field-meta.xml
<CustomField>
    <fullName>Tax_Form_Recent_Years_P_G__c</fullName>
    <label>Tax Form Recent Years P G</label>
    <length>255</length>
    <type>Text</type>
</CustomField>