force-app/main/default/objects/Application__c/fields/Teacher_s_Contract__c.field-meta.xml
<CustomField>
    <fullName>Teacher_s_Contract__c</fullName>
    <label>Teacher s Contract</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>