force-app/main/default/objects/Application__c/fields/Temp_Housing__c.field-meta.xml
<CustomField>
    <fullName>Temp_Housing__c</fullName>
    <label>Temp Housing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>