force-app/main/default/objects/Application__c/fields/Term_Semester__c.field-meta.xml
<CustomField>
    <fullName>Term_Semester__c</fullName>
    <label>Term Semester</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fall</fullName>
            </value>
            <value>
                <fullName>Spring</fullName>
            </value>
            <value>
                <fullName>Summer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>