force-app/main/default/objects/Application__c/fields/Term_Year__c.field-meta.xml
<CustomField>
    <fullName>Term_Year__c</fullName>
    <label>Term Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>