force-app/main/default/objects/Application__c/fields/Third_Party_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Sponsor__c</fullName>
    <label>Third Party Sponsor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Don't Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>