force-app/main/default/objects/Application__c/fields/Third_Party_Sponsor_Name__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Sponsor_Name__c</fullName>
    <label>Third Party Sponsor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>