force-app/main/default/objects/Application__c/fields/Ultimate_Career_Goal__c.field-meta.xml
<CustomField>
    <fullName>Ultimate_Career_Goal__c</fullName>
    <label>Ultimate Career Goal</label>
    <type>TextArea</type>
</CustomField>