force-app/main/default/objects/Application__c/fields/Vehicle_Registration_Issue_Date_P_G__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Registration_Issue_Date_P_G__c</fullName>
    <label>Vehicle Registration Issue Date P G</label>
    <type>Date</type>
</CustomField>