force-app/main/default/objects/Application__c/fields/Vehicle_Registration_Issue_Date_Self__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Registration_Issue_Date_Self__c</fullName>
    <label>Vehicle Registration Issue Date Self</label>
    <type>Date</type>
</CustomField>