force-app/main/default/objects/Application__c/fields/Veterans_Educational_Benefits__c.field-meta.xml
<CustomField>
    <fullName>Veterans_Educational_Benefits__c</fullName>
    <label>Veterans Educational Benefits</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I don't know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>