force-app/main/default/objects/Application__c/fields/Veterans_Services_Section__c.field-meta.xml
<CustomField>
    <fullName>Veterans_Services_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Veterans Services Section</label>
    <type>Checkbox</type>
</CustomField>