force-app/main/default/objects/Application__c/fields/Voter_Registration_Issue_Date_P_G__c.field-meta.xml
<CustomField>
    <fullName>Voter_Registration_Issue_Date_P_G__c</fullName>
    <label>Voter Registration Issue Date P G</label>
    <type>Date</type>
</CustomField>