force-app/main/default/objects/Application__c/fields/Voter_Registration_Issue_Date_Self__c.field-meta.xml
<CustomField>
    <fullName>Voter_Registration_Issue_Date_Self__c</fullName>
    <label>Voter Registration Issue Date Self</label>
    <type>Date</type>
</CustomField>