force-app/main/default/objects/Application__c/fields/Work_During_First_Year__c.field-meta.xml
<CustomField>
    <fullName>Work_During_First_Year__c</fullName>
    <label>Work During First Year</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes, Full-Time</fullName>
            </value>
            <value>
                <fullName>Yes, Part-Time</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>I Don't Know</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>